Fixed bug not showing background picture

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header {
     width: 100%;
     min-height: 30vh;
     margin-bottom: 30px;
-    background-image: url(./images/IMG_4196.jpg) title:"";
+    background-image: url(./images/IMG_4196.jpg);
     background-size: cover;
     background-position: center;
 }
